
- Renamed "initExtensionDeclarations" as "addExtensionDeclarations" and similar

- Unified itemsForDescription mechanism into the GDataObject base class

- Unit tests now invoke stringValue whenever needed so they can be omitted
  from key-value test paths

- Added "charset=UTF-8" to the XML header and "Content-Transfer-Encoding=binary"
  to binary header inside input stream MIME documents 

Release 1.3.0
5-December-2007
Changes since 1.2.0

Additions

- Added kGDataLinkRelWebContent (thanks riggle)

- Calendar events now have separate methods for recurrence and non-recurrence
  reminders, and calling setRecurrence will move the reminders appropriately
  
- Added batch support for Calendar and Spreadsheet. Calendar sample app now
  does batch delete of events when more than one event is selected.
  
- Added syncEvent, sequenceNumber, and iCalUID to Calendar event entries.

- Added spreadsheet worksheet methods for setting row and column limits,
  and default values for those in new spreadsheets.
  
- GDataService classes can now optionally follow "next" links when retrieving
  feeds.  This must be enabled by calling setServiceShouldFollowNextLinks:
  on the service object.
  
- GDataHTTPFetcher and services now optionally automatically retry fetches of
  some errors.  Calling setIsServiceRetryEnabled: enables the retry behavior
  for services.
  
- Feeds and entries now have methods for adding categories.

- GDataCategory includes label convenience method categoryWithLabel: and
  utility categories on arrays, containsCategoryWithLabel: and categoryLabels.
  GDataCategory's isEqual: now compares label data as well.
  
- Docs sample app can now delete a document.

- Picasa Web sample app now shows how to move a photo to another album.

- Added MacOSX version to service request user agent, along with a gzip string
  expected in the user agent by Google servers.

- Added a very simple Calendar "Hello World" example tool by David Oster.

  
Bugs Fixed
